--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
               <p class="project" style="text-align: left;">
                 Implementing various functionalities using Java and Hibernate to meet
-                various dynamic demands of the telecom domain which included the concept
+                various dynamic demands of the telecom domain which includes the concept
                 of ORM(Object Relational Mapping). 
               </p>
               
