--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Twitter -->
     <meta name="twitter:title" content="Kumar Shivam | Portfolio"/>
     <meta name="twitter:description" content="Portfolio of Kumar Shivam, Full Stack Developer"/>
-    <meta name="twitter:image" content="./saurabh-talreja.jpg"/>
+    <meta name="twitter:image" content="./"/>
     <meta name="twitter:site" content="Kumar Shivam | Full Stack Dev"/>
     <meta name="twitter:creator" content="Kumar Shivam | Full Stack Dev"/>
 
@@ -66,7 +66,7 @@
         <div class="row">
           <div class="col-4 col-5-large col-12-medium">
             <span class="image fit"
-              ><img src="./saurabh-talreja.jpg" alt=""
+              ><img src="./" alt=""
             /></span>
           </div>
           <div class="col-8 col-7-large col-12-medium">
